2A/05_Projet_GL/src/test/deca/context/invalid/complet/11_duplication_visibi_diff.deca
// Description :
//     duplication du decl champ en changent la visibilité 
// Resultats :
//    ligne 10 : a est deja declarée 
// Historique :
//  cree le 16/01/2024

class A {
    int a ;
    protected int a ;
}